[package]
name = "spl-elgamal-registry"
version = "0.4.0"
description = "SPL ElGamal Registry Program"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[features]
no-entrypoint = []

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
solana-account-info = "3.1.0"
solana-cpi = "3.1.0"
solana-instruction = "3.0.0"
solana-msg = "3.1.0"
solana-program-entrypoint = "3.1.1"
solana-program-error = "3.0.0"
solana-pubkey = { version = "4.0.0", features = ["curve25519"] }
solana-rent = "3.0.0"
solana-sdk-ids = "3.1.0"
solana-security-txt = "1.1.2"
solana-system-interface = { version = "3.0.0", features = ["bincode"] }
solana-sysvar = { version = "3.0.0", features = ["bincode"] }
solana-zk-sdk = "4.0.0"
spl-elgamal-registry-interface = { version = "0.1.0", path = "../elgamal-registry-interface" }
spl-pod = "0.7.2"
spl-token-confidential-transfer-proof-extraction = { version = "0.5.0", path = "../proof-extraction" }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.solana]
program-id = "regVYJW7tcT8zipN5YiBvHsvR5jXW1uLFxaHSbugABg"

[lints]
workspace = true
