[package]
name = "spl-token-confidential-transfer-proof-extraction"
version = "0.6.1"
description = "Solana Program Library Confidential Transfer Proof Extraction"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bytemuck = "1.25.0"
solana-account-info = "3.1.1"
solana-address = "2.5.0"
solana-curve25519 = "4.0.1"
solana-instruction = "3.0.0"
solana-instructions-sysvar = "3.0.0"
solana-msg = { version = "3.1.0", default-features = false, features = ["alloc"] }
solana-program-error = "3.0.1"
solana-sdk-ids = "3.1.0"
solana-zk-elgamal-proof-interface = "0.1.3"
solana-zk-sdk-pod = "0.1.2"
thiserror = { version = "2.0.18", default-features = false }
