[package]
name = "spl-token-confidential-transfer-proof-generation"
version = "0.6.0"
description = "Solana Program Library Confidential Transfer Proof Generation"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
curve25519-dalek = "4.1.3"
solana-zk-sdk = "6.0.1"
solana-zk-sdk-pod = "0.1.1"
solana-zk-elgamal-proof-interface = "0.1.2"
thiserror = "2.0.18"

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[lints]
workspace = true
