[package]
name = "spl-token-confidential-transfer-proof-test"
version = "0.0.1"
publish = false
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dev-dependencies]
curve25519-dalek = "4.1.3"
solana-zk-sdk = "6.0.0"
solana-zk-elgamal-proof-interface = "0.1.2"
thiserror = "2.0.18"
spl-token-confidential-transfer-proof-extraction = { version = "0.6.0", path = "../proof-extraction" }
spl-token-confidential-transfer-proof-generation = { version = "0.6.0", path = "../proof-generation" }
