[package]
name = "spl-transfer-hook-example-swap"
version = "1.0.0"
description = "Solana Program Library Transfer Hook Example: Swap"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"
publish = false

[dependencies]
solana-account-info = "3.1.0"
solana-address = "2.5.0"
solana-program-entrypoint = "3.1.1"
solana-program-error = "3.0.1"
spl-token-2022 = { path = "../../../../program", features = ["no-entrypoint"] }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
